vw/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vw
  namespace: default
spec:
  selector:
    app: vw
  ports:
  - name: http
    targetPort: 80
    port: 80
