vw/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vw-lan
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vw.k3s.resulaj.eu`)
      kind: Rule
      services:
        - name: vw
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: k3s-resulaj-eu-production-tls

# External-Network
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vw-wan
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vw.resulaj.eu`)
      kind: Rule
      services:
        - name: vw
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: resulaj-eu-production-tls
